--- a/public/style.css
+++ b/public/style.css
@@ -1,29 +1,92 @@
 body{
+  display: inline;
   background-color: #e0e0e0;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+}
+
+body > h1{
+  text-align: center;
 }
 
 button{
   margin-top: 0.5rem;
 }
 
+textarea{
+  width: calc(100% - 5px);
+  height: 5rem;
+  resize: none;
+}
+
 p{
   margin: 0;
 }
 
-#result{
+#content{
   display: flex;
-  flex-wrap: wrap;
-
+  flex-direction: row;
 }
 
-.diceElement{
-  height: 2.5rem;
-  width: 2.5rem;
-  margin: 0.25rem;
-  line-height: 2.5rem;
-  text-align: center;
-  font-weight: bold;
+#newEntry_container{
+  display: flex;
+  flex-direction: column;
+  margin: 0.75rem;
+  padding: 5px;
   background-color: #ffffff;
   border: 1px solid grey;
   border-radius: 3px;
+  width: 20rem;
 }
+
+#newEntry_container > button{
+  width: 6rem;
+  height: 2.5rem;
+}
+
+#current_todo{
+  display: flex;
+  flex-direction: column;
+  margin-left: 6rem;
+  width: 20rem;
+}
+
+#current_todo > button{
+  width: 6rem;
+  height: 2.5rem;
+}
+
+#todo_container{
+  display: flex;
+  flex-direction: row;
+  background-color: #ffffff;
+  margin: 0.75rem;
+  padding: 5px;
+  border: 1px solid grey;
+  border-radius: 3px;
+  flex-grow: 1;
+
+}
+
+#list_todo{
+  background-color: #ffffff;
+  width: 16rem;
+  height: 10rem;
+  overflow-y: scroll;
+  border: 1px solid grey;
+  border-radius: 3px;
+  list-style-type: none;
+  padding: 0; 
+  margin: 0; 
+}
+#list_todo > li{
+  padding: 3px;
+}
+
+#list_todo > li:hover{
+  background-color: rgb(179, 233, 243);
+  font-weight: 600;
+  cursor: pointer;
+}
+
